# ov2_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  handlers.py  keyboard.py  main.py  pyproject.toml  states.py  text.py
